check_error_image.txt
   Compiling xt-screen-translator v0.5.0 (F:\Github\screen-grounded-translator)
warning: unused import: `Mutex`
 --> src\api.rs:6:22
  |
6 | use std::sync::{Arc, Mutex, atomic::{AtomicBool, Ordering}, mpsc};
  |                      ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `windows::Win32::UI::WindowsAndMessaging::*`
 --> src\overlay\assistant_overlay.rs:4:5
  |
4 | use windows::Win32::UI::WindowsAndMessaging::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `AtomicBool` and `Ordering`
 --> src\overlay\assistant_overlay.rs:8:25
  |
8 | use std::sync::atomic::{AtomicBool, Ordering};
  |                         ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `windows::Win32::Foundation::*`
 --> src\capture.rs:2:5
  |
2 | use windows::Win32::Foundation::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::api::translate_text_streaming`
 --> src\assistant.rs:3:5
  |
3 | use crate::api::translate_text_streaming;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ImageBuffer` and `Rgba`
 --> src\assistant.rs:6:13
  |
6 | use image::{ImageBuffer, Rgba};
  |             ^^^^^^^^^^^  ^^^^

warning: unused imports: `DateTime` and `Local`
 --> src\assistant.rs:7:14
  |
7 | use chrono::{DateTime, Local};
  |              ^^^^^^^^  ^^^^^

warning: unused import: `windows::Win32::Graphics::Gdi::*`
  --> src\main.rs:20:5
   |
20 | use windows::Win32::Graphics::Gdi::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\overlay\assistant_overlay.rs:206:68
    |
206 | ...                   h.add_user_message(input.clone(), context_image.clone(), context_text);
    |                         ----------------                ^^^^^^^^^^^^^^^^^^^^^ expected `Option<Vec<u8>>`, found `Option<Arc<ImageBuffer<Rgba<u8>, ...>>>`
    |                         |
    |                         arguments to this method are incorrect
    |
    = note: expected enum `std::option::Option<std::vec::Vec<u8>>`
               found enum `std::option::Option<std::sync::Arc<ImageBuffer<image::Rgba<u8>, std::vec::Vec<u8>>>>`
note: method defined here
   --> src\assistant.rs:35:12
    |
 35 |     pub fn add_user_message(&mut self, content: String, context_image: Option<Vec<u8>>, context_text: Option<String>) {
    |            ^^^^^^^^^^^^^^^^                             ------------------------------

error[E0308]: mismatched types
   --> src\overlay\assistant_overlay.rs:216:88
    |
216 | ...                   let _ = send_chat_streaming(&config_clone, &temp_h, input, context_image, None, |chunk| {
    |                               -------------------                                ^^^^^^^^^^^^^ expected `Option<Vec<u8>>`, found `Option<Arc<ImageBuffer<Rgba<u8>, ...>>>`
    |                               |
    |                               arguments to this function are incorrect
    |
    = note: expected enum `std::option::Option<std::vec::Vec<u8>>`
               found enum `std::option::Option<std::sync::Arc<ImageBuffer<image::Rgba<u8>, std::vec::Vec<u8>>>>`
note: function defined here
   --> src\assistant.rs:83:8
    |
 83 | pub fn send_chat_streaming<F>(
    |        ^^^^^^^^^^^^^^^^^^^
...
 87 |     image_context: Option<Vec<u8>>,
    |     ------------------------------

warning: unused variable: `overlay_hwnd`
    --> src\api.rs:1093:5
     |
1093 |     overlay_hwnd: HWND, // The result window (or we create it here? No, session creates it)
     |     ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_overlay_hwnd`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\gui\app.rs:881:45
    |
881 | ...                   let mut models_for_text: Vec<_> = get_all_models()
    |                           ----^^^^^^^^^^^^^^^
    |                           |
    |                           help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `*self.assistant_generating` is never read
    --> src\gui\app.rs:1661:45
     |
1661 | ...                   self.assistant_generating = true;
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = help: maybe it is overwritten before being read?
     = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ----^^^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`

warning: unused variable: `show_system_cursor`
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_show_system_cursor`

warning: unused variable: `text_res`
   --> src\overlay\process.rs:626:33
    |
626 | ...                   let text_res = translate_text_streaming(
    |                           ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_text_res`

warning: unused variable: `chunk`
   --> src\overlay\process.rs:865:34
    |
865 | ...                   |chunk| {
    |                        ^^^^^ help: if this is intentional, prefix it with an underscore: `_chunk`

warning: unused variable: `overlay_hwnd`
   --> src\overlay\process.rs:692:5
    |
692 |     overlay_hwnd: HWND,
    |     ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_overlay_hwnd`

warning: unused variable: `ui_language`
   --> src\overlay\process.rs:724:60
    |
724 |     let (groq_api_key, gemini_api_key, openrouter_api_key, ui_language) = {
    |                                                            ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ui_language`

warning: unused variable: `streaming_enabled`
   --> src\overlay\process.rs:736:9
    |
736 |     let streaming_enabled = preset.streaming_enabled;
    |         ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_streaming_enabled`

warning: unused variable: `chunk`
    --> src\overlay\process.rs:1115:34
     |
1115 | ...                   |chunk| {}
     |                        ^^^^^ help: if this is intentional, prefix it with an underscore: `_chunk`

warning: unused variable: `chunk`
    --> src\overlay\process.rs:1025:22
     |
1025 |                     |chunk| { 
     |                      ^^^^^ help: if this is intentional, prefix it with an underscore: `_chunk`

warning: unused variable: `overlay_hwnd`
   --> src\overlay\process.rs:914:5
    |
914 |     overlay_hwnd: HWND,
    |     ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_overlay_hwnd`

warning: unused variable: `ui_language`
   --> src\overlay\process.rs:946:60
    |
946 |     let (groq_api_key, gemini_api_key, openrouter_api_key, ui_language) = {
    |                                                            ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ui_language`

warning: variable does not need to be mutable
  --> src\assistant.rs:89:5
   |
89 |     mut on_chunk: F,
   |     ----^^^^^^^^
   |     |
   |     help: remove this `mut`

warning: unused variable: `clipboard_context`
  --> src\assistant.rs:88:5
   |
88 |     clipboard_context: Option<String>,
   |     ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_clipboard_context`

warning: unused variable: `error_msg`
  --> src\main.rs:80:13
   |
80 |         let error_msg = if let Some(s) = panic_info.payload().downcast_ref::<&str>() {
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_error_msg`

For more information about this error, try `rustc --explain E0308`.
warning: `xt-screen-translator` (bin "xt-screen-translator") generated 25 warnings
error: could not compile `xt-screen-translator` (bin "xt-screen-translator") due to 2 previous errors; 25 warnings emitted
